[workspace]
resolver = "2"
members = [
    "circuit-std-rs",
    "expander_compiler",
    "expander_compiler/ec_go_lib",
    "expander_compiler/macros",
    "rsa_circuit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[workspace.dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
axum = "0.7"
base64 = "0.22.1"
big-int = "7.0.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
ethnum = "1.5.0"
itertools = "0.13.0"
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = ["bits"] }
hex = "0.4"
num-bigint = "0.4.6"
num_cpus = "1.16.0"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_memory = "0.12.4"
sha2 = "0.10.8"
stacker = "0.1.17"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1", features = ["full"] }
zerocopy = ">=0.8.26, <0.8.38"

arith = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
babybear = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
crosslayer_prototype = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
expander_circuit = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "circuit" }
expander_transcript = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "transcript" }
expander_binary = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "bin" }
gkr = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
gf2 = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
mersenne31 = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
goldilocks = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
poly_commit = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "poly_commit" }
polynomials = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
sumcheck = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
serdes = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "serdes" }
gkr_engine = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
gkr_hashers = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi" }
expander_utils = { git = "https://github.com/inference-labs-inc/Expander", branch = "rm-mpi", package = "utils" }
