[package]
name = "ec_go_lib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
arith.workspace = true
expander_binary.workspace = true
expander_circuit.workspace = true
expander_transcript.workspace = true
gkr.workspace = true
gkr_engine.workspace = true
rand.workspace = true
serdes.workspace = true

expander_compiler = { path = "../" }

libc = "0.2.155"
